# lab-nidaq-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: IMPLEMENTATION_NOTES.md  SAFETY_DESIGN.md  USING_THIS_TEMPLATE.md
src/lab_backend_template/: __init__.py  backend.py  cli.py  discovery.py  mock_backend.py  resource.py  wire.py
src/lab_backend_template/builtin_instruments/: __init__.py  echo_example.yaml
src/lab_nidaq_mcp/: __init__.py  backend.py  cli.py  config.py  discovery.py  mock_backend.py  resource.py  wire.py
src/lab_nidaq_mcp/builtin_instruments/: __init__.py  usb_6009.yaml  usb_6210.yaml
tests/: test_assets_workflows.py  test_backends.py  test_config.py  test_discovery_packaging.py  test_instrument_definitions.py  test_integration.py  test_wire_resource.py
