[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-backend-template"
version = "0.1.0"
description = "Working example backend template for lab-executor-mcp"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "laboratory-automation", "instrument-control", "lab-executor-mcp",
    "backend-template", "experiment-automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "lab-executor-mcp>=2.35.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8",
    "build>=1.0",
    "twine>=5.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/TECTOS-JP/lab-backend-template"
Repository = "https://github.com/TECTOS-JP/lab-backend-template"
Changelog = "https://github.com/TECTOS-JP/lab-backend-template/blob/main/CHANGELOG.md"
Issues = "https://github.com/TECTOS-JP/lab-backend-template/issues"

[project.entry-points."lab_executor.backends"]
echo = "lab_backend_template.discovery:make_backend"

[project.scripts]
lab-backend = "lab_backend_template.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/.gitignore",
    "/src/lab_backend_template",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
    "/conftest.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lab_backend_template"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
